# signal-protocol

./: Cargo.toml  README.md
src/: address.rs  curve.rs  error.rs  fingerprint.rs  group_cipher.rs  identity_key.rs  lib.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs  uuid.rs
tests/: test_group_cipher.py  test_ratchet.py  test_session.py  test_state.py
tests/utils/: sessions.py
