[package]
name = "signal-protocol"
version = "0.2.2"
authors = ["jen <jen@freedom.press>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
rand = "0.8"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal/", rev="ef5f5b9104fb52c1f9a99b8dc8c6682e57264833" }
libsignal-core = { git = "https://github.com/signalapp/libsignal/", rev="ef5f5b9104fb52c1f9a99b8dc8c6682e57264833" }
pyo3 = { version = "0.23", features = ["extension-module"] }
futures = "0.3.7"
uuid = { version = "1.13.1", features = ["v4"] }


[lib]
name = "signal_protocol"
crate-type = ["cdylib"]
